@@ -1,3 +1,9 @@
+2008-01-31  Nick Clifton  <nickc@redhat.com>
+
+	PR ld/5692
+	* elf.c (bfd_elf_get_elf_syms): Check the return value of
+	get_elf_backend_data.
+
 2008-01-28  Fabian Groffen  <grobian@gentoo.org>
 
 	* config.bfd (x86_64-*-solaris2): Add support for this target.
